# bakudo

./: .gitignore  .mise.toml  AGENTS.md  BAKUDO_SPLIT.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  eslint.config.js  justfile  package.json  pnpm-lock.yaml  tsconfig.json
.bakudo/: host-state.json
.bakudo-ux-briefs/: pr1-extract-hostcli.md  pr2-app-state-and-transcript.md  pr3-session-continuity-inspect.md  pr4-narration-bootstrap-docs.md  run-pr1.sh
.bakudo/sessions/: index.json
.claude/skills/: bug-fix.md  feature-development.md  meta-orchestrator.md  mission-runtime.md  refactor-code.md  release-process.md  run-tests.md  update-policy.md  version-management.md  worktree-hygiene.md
.github/workflows/: ci.yml
ci/: README.md  github-workflow-example.yml
config/: default.json
crates/bakudo-core/: Cargo.toml
crates/bakudo-core/src/: abox.rs  config.rs  control.rs  error.rs  hook.rs  lib.rs  mission.rs  policy.rs  protocol.rs  provider.rs  session.rs  state.rs
crates/bakudo-daemon/: Cargo.toml
crates/bakudo-daemon/data/abox-runtime/: abox-config.toml
crates/bakudo-daemon/data/abox-runtime/policies/: default.toml
crates/bakudo-daemon/data/prompts/: explore.md  mission.md
crates/bakudo-daemon/data/providers/: claude-explore.toml  claude-mission.toml  codex-explore.toml  codex-mission.toml  gemini-explore.toml  gemini-mission.toml  opencode-explore.toml  opencode-mission.toml
crates/bakudo-daemon/src/: abox_runtime.rs  candidate.rs  doctor.rs  hooks.rs  host.rs  lib.rs  macro_session.rs  mission_status.rs  mission_store.rs  objective.rs  provider_runtime.rs  session_controller.rs  task_runner.rs  trace.rs  worktree.rs
crates/bakudo-daemon/src/worker/: mod.rs
crates/bakudo-tui/: Cargo.toml
crates/bakudo-tui/src/: app.rs  color.rs  commands.rs  custom_terminal.rs  events.rs  footer.rs  history_render.rs  insert_history.rs  key_hint.rs  lib.rs  palette.rs  shimmer.rs  status_indicator.rs  style.rs  terminal_palette.rs  test_backend.rs  transcript_store.rs  ui.rs  wrapping.rs
crates/bakudo-worker/: Cargo.toml
crates/bakudo-worker/src/: main.rs
docs/: 2026-04-26-runtime-improvements-implementation-plan.md  USER_GUIDE.md  archive-alignment-checklist.md  bakudo-v2-architecture-and-implementation-plan.md  bakudo-v2-architecture-revised-plan.md  claude-consolidated-plan.md  codex-revised-plan.md  current-architecture.md  golden-maintenance.md  manus-simplified-conductor-plan.md  product-motive-and-operator-workflow.md  provider-conductor-implementation-plan.md
docs/archive/: bakudo-v2-architecture-and-implementation-plan.md  bakudo-v2-architecture-revised-plan.md
docs/help/: candidate-apply.md  config.md  hooks.md  monitoring.md  permissions.md  sandbox.md
docs/superspecs/: 2026-04-21-orchestrator-tui-design.md
examples/: 01-readonly-repo-audit.sh  02-test-surface-scan.sh  03-network-smoke.sh  README.md  plan-mode.json  run-abox-smoke.sh
plans/integration/: 2026-04-18-integration-roadmap.md  2026-04-18-phase-0-implementation-plan.md  2026-04-18-phase-0-spec.md  2026-04-19-bakudo-abox-control-plane-implementation-plan.md  2026-04-19-bakudo-abox-control-plane-spec.md  2026-04-19-control-plane-review.md  2026-04-19-implementation-progress.md  2026-04-20-preserved-candidate-apply-residue-plan.md
scripts/: clean-dist.mjs  install.sh  package-release.sh  postbuild.mjs  push-harness-to-repo.sh
scripts/local/: agent_smoke_test.sh  integration_test.sh
src/: aboxAdapter.ts  aboxTaskRunner.ts  artifactStore.ts  attemptPath.ts  attemptProtocol.ts  cli.ts  config.ts  hostCli.ts  main.rs  mainModule.ts  memory.ts  models.ts  node-shims.d.ts  orchestrator.ts  policy.ts  protocol.ts  resultClassifier.ts  reviewer.ts  sessionMigration.ts  sessionNormalize.ts  sessionStore.ts  sessionTypes.ts  tools.ts  version.ts  workerCli.ts  workerRuntime.ts
src/daemon/: curator.ts  gateway.ts  janitor.ts
src/host/: ansi.ts  appState.ts  applyArtifacts.ts  applyDispatch.ts  applyRecovery.ts  applyWorkspace.ts  approvalPolicy.ts  approvalProducer.ts  approvalProducerSupport.ts  approvalStore.ts  artifactStore.ts  attemptCompiler.ts  attemptLineage.ts  autopilotContinueTracker.ts  bootstrap.ts  candidateApplier.ts  candidateManifest.ts  commandRegistry.ts  commandRegistryDefaults.ts  config.ts  conflictPolicy.ts  conflictResolution.ts  copilotFlagParser.ts  copilotFlags.ts  dashboard.ts  dialogLauncher.ts  dispatchProgress.ts  distributionCommands.ts  doctorAboxProbe.ts  doctorCheck.ts  envPolicy.ts  errorCopy.ts  errors.ts  eventLogWriter.ts  eventProjector.ts  executeAttempt.ts  explainConfig.ts  flags.ts  followUpActions.ts  fuzzyFilter.ts  (+64 more)
src/worker/: assistantJobRunner.ts  chaosMonkeyRunner.ts  checkRunner.ts  commandRunner.ts  criticRunner.ts  explorerRunner.ts  synthesizerRunner.ts  taskKinds.ts
tests/: harness.test.ts  integration.rs  runtime.rs
tests/benchmarks/: open-shell-and-resume-latest.bench.ts  retry-failed-turn-and-inspect-lineage.bench.ts  submit-build-and-inspect.bench.ts
tests/golden/: approval-prompt-network.test.ts  approval-prompt-shell-git.test.ts  autopilot-run.test.ts  doctor-output.test.ts  empty-shell-plain.test.ts  empty-shell-tty.test.ts  first-prompt-new-session.test.ts  follow-up-turn.test.ts  inspect-provenance.test.ts  inspect-summary.test.ts  (+4 more)
(+351 files in other folders)
