[workspace]
members = [
    "crates/bakudo-core",
    "crates/bakudo-tui",
    "crates/bakudo-daemon"
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/X-McKay/bakudo"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.18"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.26"
crossterm = "0.27"
uuid = { version = "1.8", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
supports-color = "3"

[package]
name = "bakudo"
version = "2.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bakudo-core = { version = "2.0.0", path = "crates/bakudo-core" }
bakudo-tui = { version = "2.0.0", path = "crates/bakudo-tui" }
bakudo-daemon = { version = "2.0.0", path = "crates/bakudo-daemon" }
anyhow.workspace = true
tokio.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
ratatui.workspace = true
crossterm.workspace = true
dirs = "6.0.0"
chrono = { workspace = true, features = ["serde"] }
jsonschema.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
uuid.workspace = true
