[package]
name = "bakudo-core"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs = "6.0.0"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.18"
tokio.workspace = true
tokio-util = { version = "0.7.18", features = ["full"] }
toml = "1.1.2"
tracing.workspace = true
uuid.workspace = true
