[package]
name = "bakudo-core"
version = "2.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs = "6.0.0"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.18"
tokio.workspace = true
toml = "1.1.2"
tracing.workspace = true
uuid.workspace = true
