[package]
name = "bakudo-daemon"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bakudo-core = { version = "2.0.0", path = "../bakudo-core" }
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
uuid.workspace = true
