[package]
name = "bakudo-daemon"
version = "2.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.7"
bakudo-core = { version = "2.0.0", path = "../bakudo-core" }
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
uuid.workspace = true
