[package]
name = "bakudo-tui"
version = "2.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bakudo-core = { version = "2.0.0", path = "../bakudo-core" }
bakudo-daemon = { version = "2.0.0", path = "../bakudo-daemon" }
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-segmentation = "1"
unicode-width = "0.2.2"
strum = { version = "0.26", features = ["derive"] }
